--- a/css/style.css
+++ b/css/style.css
@@ -9,21 +9,23 @@
 
 .conteiner {
     margin: auto;
-    /* border: 1px solid red; */
-    width: 713px;
+    width: 1080px;
     padding-bottom: 18px;
 }
 
 .doscajas {
     display: flex;
 }
+.aboutme {
+    display: flex;
+}
 
 .informacion {
     width: 382px;
-    height: 392px;
+    height: 465px;
     padding-left: 36px;
-    padding-top: 104px;
-    background: #F261FF;
+    padding-top: 90px;
+    background: #79E6C9;
     border-radius: 0px 16px 16px 0px;
 }
 
@@ -38,9 +40,17 @@ button {
     width: 74px;
     height: 28px;
     margin-top: 15px;
-    color: #F261FF;
+    color: #79E6C9;
     border: none;
     font-weight: 700;
+    transition: all 1s;
+    cursor: pointer;
+}
+button:hover {
+    color: #fff;
+    background-color: #79E6C9;
+    border: 4px solid #fff;
+    transition: all ease-in-out 1s;
 }
 
 .w400 {
@@ -61,33 +71,42 @@ button {
 }
 
 .foto {
-    width: 330px;
+    width: 698px;
     height: 392px;
     background: #000;
+    background-image: url("../img/person.jpg");
+    height: 465px;
+    background-size: cover;
+    background-position-x: center;
+    position: center;
 }
+
 
 .cajitas {
     width: 50%;
     height: 374px;
-    /* border: 1px solid red; */
 }
 
 .cajanegra {
-    width: 230px;
-    height: 230px;
+    width: 300px;
+    height: 300px;
     margin-left: 68px;
     margin-top: 63px;
-    background: #000;
+    /* background: #000; */
     border-radius: 18px;
     position: absolute;
     z-index: 1;
+    background-image: url("../img/programacion.png");
+    background-size: cover;
+    background-position-x: center;
+    position: center;
 }
 
 .cajarosada {
-    width: 159px;
-    height: 173px;
+    width: 250px;
+    height: 250px;
     border-radius: 0px 18px 18px 0px;
-    background: #D934DC;
+    background: #29E3F4;
     margin-top: 138px;
     position: relative;
 }
@@ -123,7 +142,6 @@ button {
 .unacaja {
     width: 100%;
     height: 179px;
-    /* border: 1px solid red; */
     padding-left: 37px;
     padding-top: 33px;
 }
@@ -137,7 +155,6 @@ button {
     display: flex;
     justify-content: space-evenly;
     padding-top: 24px;
-    /* border: 1px solid red; */
 }
 
 .caja1,
@@ -257,4 +274,229 @@ button {
     font-size: 10px;
     line-height: 18px;
     padding-top: 9px;
+}
+
+.grilla1{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(196px, 1fr));
+    column-gap: 60px;
+    row-gap: 24px;
+    place-items: center;
+    height: 416px;
+    padding-top: 24px;
+    padding-left: 90px;
+    padding-right: 100px;
+}
+.grilla2{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(196px, 1fr));
+    column-gap: 60px;
+    row-gap: 24px;
+    place-items: center;
+    /* height: 416px; */
+    padding-top: 24px;
+    padding-left: 90px;
+    padding-right: 100px;
+}
+.grilla3{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(196px, 1fr));
+    column-gap: 60px;
+    row-gap: 24px;
+    place-items: center;
+    /* height: 416px; */
+    padding-top: 24px;
+    padding-left: 90px;
+    padding-right: 100px;
+}
+.caja {
+    width: 196px;
+    height: 196px;
+    background: #000;
+    border-radius: 18px;
+}
+
+@media screen and (max-width:1200px) {
+    .conteiner {
+        width: 700px;
+    }
+    .informacion {
+        height: 300px;
+        padding-top: 25px;
+    }
+    button {
+        margin-top: 0;
+    }
+    .lorem {
+        width: 300px;
+    }
+    .foto {
+        height: 300px;
+        background-size: cover;
+        background-position-x: center;
+        position: center;
+    }
+    .cajitas { height: 300px;}
+    .cajanegra,
+    .cajarosada {
+        width: 200px;
+        height: 200px;
+    }
+    .cajanegra {
+        margin-top: 50px;
+    }
+    .cajarosada { margin-top: 90px;}
+    .texto { padding-top: 50px;}
+    .grilla1,
+    .grilla2,
+    .grilla3 {
+        height: auto;
+        column-gap: 20px;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+    .unacaja,
+    .work,
+    .experience {
+        padding-top: 30px;
+    }
+}
+@media screen and (max-width:768px) {
+    .conteiner {
+        width: 550px;
+    }
+    .doscajas {
+        display: grid;
+    }
+    .informacion {
+        width: 550px;
+        height: 300px;
+        padding-top: 25px;
+        border-radius: 20px 20px 0 0;
+    }
+    button {
+        margin-top: 0;
+    }
+    .lorem {
+        width: 300px;
+    }
+    .foto {
+        width: 550px;
+        height: 300px;
+        background-size: cover;
+        background-position-x: center;
+        position: center;
+        border-radius: 0 0 20px 20px;
+    }
+    .aboutme {
+        grid-template-columns: repeat(auto-fit, minmax(196px, 1fr));
+    }
+    .cajitas {
+        height: 300px;
+        width: 250px;
+    }
+    .texto {
+        width: 250px;
+    }
+    .cajanegra {margin-left: 30px;}
+    .cajanegra,
+    .cajarosada {
+        width: 200px;
+        height: 200px;
+    }
+    .cajanegra {
+        margin-top: 50px;
+    }
+    .cajarosada { margin-top: 70px;}
+    .texto { padding-top: 50px;}
+    .grilla1,
+    .grilla2,
+    .grilla3 {
+        height: auto;
+        column-gap: 20px;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+    .unacaja,
+    .work,
+    .experience {
+        padding-top: 30px;
+    }
+}
+@media screen and (max-width:425px) {
+    .conteiner {
+        width: 400px;
+    }
+    .doscajas {
+        display: grid;
+    }
+    .informacion {
+        width: 400px;
+        height: 300px;
+        padding-top: 25px;
+        border-radius: 20px 20px 0 0;
+    }
+    button {
+        margin-top: 0;
+    }
+    .lorem {
+        width: 300px;
+    }
+    .foto {
+        width: 400px;
+        height: 300px;
+        background-size: cover;
+        background-position-x: center;
+        position: center;
+        border-radius: 0 0 20px 20px;
+    }
+    .aboutme {
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+    .cajitas {
+        height: 350px;
+        width: 400px;
+    }
+    .cajanegra {
+        width: 250px;
+        height: 250px;
+        margin-left: 18%;
+    }
+    .cajarosada {
+        width: 280px;
+        height: 280px;
+        margin-left: 12%;
+        margin-top: 35px;
+        border-radius: 18px 18px 18px 18px;
+    }
+    .cajanegra {
+        margin-top: 50px;
+    }
+    .texto,
+    .unacaja,
+    .work,
+    .experience {
+        width: 400px;
+        display: grid;
+        justify-items: center;
+        padding-left: 0;
+    }
+    .circulos {
+        margin-top: 20px;
+    }
+    .grilla1,
+    .grilla2,
+    .grilla3 {
+        height: auto;
+        column-gap: 20px;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+    .texto,
+    .unacaja,
+    .work,
+    .experience {
+        padding-top: 30px;
+    }
 }
